2017-11-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* Tweak RPM spec file.

4.18.2

2017-09-27  Giovanni Bechis <giovanni@paclan.it>

	* Fix to configure.ac

2017-09-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier: switch default header encoding to UTF-8.

4.18.1

2017-08-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* OpenSSL 1.1.0 compilation fixes.

4.18.0

2017-06-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/maildir/maildirquota.c (docheckquota): Skip DT_LNK.

2017-03-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier-unicode library API update.

2017-02-07  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/tcpd/libcouriertls.c: OpenSSL API update.

4.17.3

2016-09-20  "Hanno Böck" <hanno@hboeck.de>

	* libs/maildrop/maildir.C (MaildirSave): Fix new/delete mismatch.
	* libs/sqwebmail/gpg.c: Fix external linkage.

4.17.2

2016-08-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* imapd.c (do_folder_delete): Fix check for DELETE INBOX.

4.17.1

2016-04-30  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix TLS SNI code.

4.17.0

2016-04-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* Stop using SSL2 and SSL3 openssl configuration methods.

2016-03-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/tcpd/libcouriertls.c: Add support for TLS SNI.

2016-01-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* imaplogin.c (starttls): flush stdin after negotiating STARTTLS.

2016-01-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix Courier-IMAP rpm build on pre-systemd systems.

4.16.2

2015-06-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* imap/mailboxlist.c (match_mailbox_prep): Use strncmp instead of
	memcmp, to pacify overzealous static analysis checkers.

2015-05-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* Drop SSLv3 from TLS_CIPHER_LIST.

2015-06-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* imap, pop3: Added AUTH_MKHOMEDIR_SKEL setting.

4.16.1

2015-04-25  Giovanni Bechis <giovanni@openbsd.org>
