@@ -1,3 +1,12 @@
+2018-02-13  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* libs/tcpd/libcouriergnutls.c: Remove usage of deprecated OpenPGP
+	API. Tag the "Unexpected SSL connection shutdown" with the "DEBUG"
+	label just like the OpenSSL version does.
+
+	* libs/tcpd/starttls.c: If TCPREMOTEIP is set, prepend it to error
+	messages.
+
 2017-11-26  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Tweak RPM spec file.
